syntax = "proto3";
package commercionetwork.commercionetwork.vbr;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
//import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/commercionetwork/commercionetwork/x/vbr/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
    rpc GetBlockRewardsPoolFunds(QueryGetBlockRewardsPoolFundsRequest) returns (QueryGetBlockRewardsPoolFundsResponse) {
		option (google.api.http).get = "/commercionetwork/commercionetwork/vbr/funds";
	}

	rpc GetRewardRate(QueryGetRewardRateRequest) returns (QueryGetRewardRateResponse) {
		option (google.api.http).get = "/commercionetwork/commercionetwork/vbr/reward_rate";
	}

	rpc GetAutomaticWithdraw(QueryGetAutomaticWithdrawRequest) returns (QueryGetAutomaticWithdrawResponse) {
		option (google.api.http).get = "/commercionetwork/commercionetwork/vbr/automatic_withdraw";
	}
}

// this line is used by starport scaffolding # 3
message QueryGetBlockRewardsPoolFundsRequest {
}

message QueryGetBlockRewardsPoolFundsResponse {
	repeated cosmos.base.v1beta1.DecCoin funds = 1 [(gogoproto.moretags) = "yaml:\"funds\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false] ;
}

message QueryGetRewardRateRequest {
}

message QueryGetRewardRateResponse {
	string rewardRate = 1 [(gogoproto.moretags) = "yaml:\"rewardRate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false] ;
}

message QueryGetAutomaticWithdrawRequest {
}

message QueryGetAutomaticWithdrawResponse {
	bool autoW = 1 [(gogoproto.moretags) = "yaml:\"autoW\""] ;
}


